--- a/progetto-2021.ipynb
+++ b/progetto-2021.ipynb
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:27.006415Z",
@@ -2004,7 +2004,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">-720</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">1620.200000</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">1620.2</th>\n",
        "      <th>Bernard Knox</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2020,56 +2020,49 @@
        "      <th>Robert Fagles</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">1595</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">7389.000000</th>\n",
-       "      <th>Robert           Jackson</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>William Shakespeare</th>\n",
+       "      <th>2009</th>\n",
+       "      <th>88538.0</th>\n",
+       "      <th>Suzanne Collins</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">1811</th>\n",
-       "      <th rowspan=\"3\" valign=\"top\">3842.000000</th>\n",
-       "      <th>Jane Austen</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>96274.0</th>\n",
+       "      <th>Suzanne Collins</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ros Ballaster</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>103489.0</th>\n",
+       "      <th>E.L. James</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tony Tanner</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>140739.0</th>\n",
+       "      <th>John Green</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1813</th>\n",
-       "      <th>49152.000000</th>\n",
-       "      <th>Jane Austen</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">1818</th>\n",
-       "      <th rowspan=\"3\" valign=\"top\">6664.333333</th>\n",
-       "      <th>Mary Wollstonecraft Shelley</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Maurice Hindle</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Percy Bysshe Shelley</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1847</th>\n",
-       "      <th>15606.000000</th>\n",
-       "      <th>Charlotte Brontë</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>93600.0</th>\n",
+       "      <th>Paula Hawkins</th>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>88 rows × 0 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
        "Columns: []\n",
-       "Index: [(-720, 1620.2, Bernard Knox), (-720, 1620.2, E.V. Rieu), (-720, 1620.2, Frédéric Mugler), (-720, 1620.2, Homer), (-720, 1620.2, Robert Fagles), (1595, 7389.0, Robert           Jackson), (1595, 7389.0, William Shakespeare), (1811, 3842.0, Jane Austen), (1811, 3842.0, Ros Ballaster), (1811, 3842.0, Tony Tanner), (1813, 49152.0, Jane Austen), (1818, 6664.333333333333, Mary Wollstonecraft Shelley), (1818, 6664.333333333333, Maurice Hindle), (1818, 6664.333333333333, Percy Bysshe Shelley), (1847, 15606.0, Charlotte Brontë)]"
+       "Index: [(-720, 1620.2, Bernard Knox), (-720, 1620.2, E.V. Rieu), (-720, 1620.2, Frédéric Mugler), (-720, 1620.2, Homer), (-720, 1620.2, Robert Fagles), (1595, 7389.0, Robert           Jackson), (1595, 7389.0, William Shakespeare), (1811, 3842.0, Jane Austen), (1811, 3842.0, Ros Ballaster), (1811, 3842.0, Tony Tanner), (1813, 49152.0, Jane Austen), (1818, 6664.333333333333, Mary Wollstonecraft Shelley), (1818, 6664.333333333333, Maurice Hindle), (1818, 6664.333333333333, Percy Bysshe Shelley), (1847, 15606.0, Charlotte Brontë), (1847, 15606.0, Michael Mason), (1859, 4364.333333333333, Charles Dickens), (1859, 4364.333333333333, Hablot Knight Browne), (1859, 4364.333333333333, Richard Maxwell), (1868, 17090.0, Louisa May Alcott), (1884, 4149.333333333333, Guy Cardwell), (1884, 4149.333333333333, John Seelye), (1884, 4149.333333333333, Mark Twain), (1891, 9823.5, Jeffrey Eugenides), (1891, 9823.5, Oscar Wilde), (1897, 5754.333333333333, Bram Stoker), (1897, 5754.333333333333, David J. Skal), (1897, 5754.333333333333, Nina Auerbach), (1911, 13054.0, Frances Hodgson Burnett), (1925, 51992.0, F. Scott Fitzgerald), (1932, 20095.0, Aldous Huxley), (1936, 16050.0, Margaret Mitchell), (1937, 37653.0, J.R.R. Tolkien), (1945, 35472.0, George Orwell), (1946, 6134.25, Antoine de Saint-Exupéry), (1946, 6134.25, Dom Marcos Barbosa), (1946, 6134.25, Melina Karakosta), (1946, 6134.25, Richard Howard), (1947, 6941.666666666667, Anne Frank), (1947, 6941.666666666667, B.M. Mooyaart-Doubleday), (1947, 6941.666666666667, Eleanor Roosevelt), (1949, 15172.666666666666, Celâl Üster), (1949, 15172.666666666666, Erich Fromm), (1949, 15172.666666666666, George Orwell), (1950, 15186.0, C.S. Lewis), (1951, 44920.0, J.D. Salinger), (1952, 4348.0, E.B. White), (1952, 4348.0, Garth Williams), (1952, 4348.0, Rosemary Wells), (1953, 30694.0, Ray Bradbury), (1954, 26886.0, William Golding), (1958, 11000.5, Elie Wiesel), (1958, 11000.5, Marion Wiesel), (1960, 72586.0, Harper Lee), (1964, 14368.0, Shel Silverstein), (1967, 22662.0, S.E. Hinton), (1969, 19646.0, Kurt Vonnegut Jr.), (1973, 15630.0, William Goldman), (1974, 9234.0, Shel Silverstein), (1977, 14936.0, Stephen King), (1979, 20345.0, Douglas Adams), (1985, 38054.0, Orson Scott Card), (1988, 27890.5, Alan R. Clarke), (1988, 27890.5, Paulo Coelho), (1989, 4239.0, John Grisham), (1990, 8143.0, Michael Crichton), (1993, 54084.0, Lois Lowry), (1995, 14915.0, Philip Pullman), (1996, 46205.0, George R.R. Martin), (1997, 37933.5, J.K. Rowling), (1997, 37933.5, Mary GrandPré), (1998, 17086.0, J.K. Rowling), (1998, 17086.0, Mary GrandPré), (1999, 47116.0, Stephen Chbosky), (2000, 25112.0, Dan Brown), (2001, 42962.0, Yann Martel), (2002, 36642.0, Alice Sebold), (2003, 59730.0, Khaled Hosseini), (2004, 30719.0, Jodi Picoult), (2005, 95009.0, Stephenie Meyer), (2006, 55732.0, Sara Gruen), (2007, 51589.0, Cassandra Clare), (2008, 155254.0, Suzanne Collins), (2009, 88538.0, Suzanne Collins), (2010, 96274.0, Suzanne Collins), (2011, 103489.0, E.L. James), (2012, 140739.0, John Green), (2015, 93600.0, Paula Hawkins)]\n",
+       "\n",
+       "[88 rows x 0 columns]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2079,7 +2072,7 @@
     "idx = temp.groupby(['original_publication_year'])['shared_number_of_reviews_with_a_text'].transform(max) == temp['shared_number_of_reviews_with_a_text']\n",
     "\n",
     "authors_highest_reviews = temp[idx] [['original_publication_year', 'shared_number_of_reviews_with_a_text', 'authors_splitted']]\n",
-    "authors_highest_reviews.set_index(['original_publication_year', 'shared_number_of_reviews_with_a_text', 'authors_splitted']).head(15)"
+    "authors_highest_reviews.set_index(['original_publication_year', 'shared_number_of_reviews_with_a_text', 'authors_splitted']).head(100)"
    ]
   },
   {
