--- a/progetto-2021.ipynb
+++ b/progetto-2021.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 127,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:07.621442Z",
@@ -61,7 +61,9 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "import ssl\n",
+    "ssl._create_default_https_context = ssl._create_unverified_context"
    ]
   },
   {
