--- a/progetto-2021.ipynb
+++ b/progetto-2021.ipynb
@@ -2585,6 +2585,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "interval = np.arange(14,84,10)\n",
     "grouped_users=list(range(len(interval)))\n",
     "grouped_users[0]=users[users[\"Age\"]<=14][[\"User-ID\",\"Age\"]]\n",
@@ -2857,7 +2859,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2871,7 +2873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
