--- a/progetto-2021.ipynb
+++ b/progetto-2021.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:06.655764Z",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:07.621442Z",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:09.632998Z",
@@ -107,7 +107,7 @@
        "(278858, 3)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:16.684608Z",
@@ -133,7 +133,7 @@
        "(271359, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:17.280658Z",
@@ -160,7 +160,7 @@
        "(99, 23)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:20.004461Z",
@@ -186,7 +186,7 @@
        "(1149780, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:20.664504Z",
@@ -212,7 +212,7 @@
        "(99, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:20.696483Z",
@@ -252,7 +252,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:20.728464Z",
@@ -285,7 +285,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:20.760463Z",
@@ -333,7 +333,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:20.792471Z",
@@ -361,7 +361,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:20.824462Z",
@@ -389,7 +389,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:22.046153Z",
@@ -534,7 +534,7 @@
        "[1163 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:22.330152Z",
@@ -665,7 +665,7 @@
        "251648  http://images.amazon.com/images/P/0385722206.0...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:22.346155Z",
@@ -742,7 +742,7 @@
        "[0 rows x 23 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,12 +764,12 @@
    "source": [
     "## 1. Normalize the location field of *Users* dataset, splitting into city, region, country.\n",
     "\n",
-    "Dividiamo la stringa `Location` nelle tre colonne in corrisponzenza delle virgole con la funzione `split` di pandas. Per tentare di risolvere i problemi legati alla presenza di piú di due virgole usiamo la variante `rsplit` che da prioritá al campo `Country`, mentre per quelle stringhe con meno di due virgole specifichiamo `expand = True` per evitare errori."
+    "Dividiamo le stringhe nella serie `Location` in tre colonne in corrisponzenza delle virgole con la funzione `split` di pandas. Per tentare di risolvere i problemi legati alla presenza di piú di due virgole usiamo la variante `rsplit` che da prioritá al campo `Country`, e per quelle stringhe con meno di due virgole specifichiamo `expand = True` per evitare errori."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:23.162191Z",
@@ -927,7 +927,7 @@
        "9         wisconsin            spain  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-15T21:01:23.398153Z",
@@ -975,18 +975,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>User-ID</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Region</th>\n",
+       "      <th>Count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Country</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -994,109 +986,77 @@
        "    <tr>\n",
        "      <th></th>\n",
        "      <td>4588</td>\n",
-       "      <td>4588</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>4588</td>\n",
-       "      <td>4588</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>\"n/a\"</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&amp;#20013;&amp;#22269;</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&amp;#32654;&amp;#22269;</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>*</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zambia</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zhengjiang</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <th>zimbabwe</th>\n",
+       "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-------</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <th>Ã¤Â¸Â­Ã¥?Â½</th>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>.</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>01776</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>02458</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <th>Ã¶Ã°Â¹Ãº</th>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>628 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   User-ID  Location   Age  City  Region\n",
-       "Country                                                 \n",
-       "                      4588      4588  2000  4588    4588\n",
-       " \"n/a\"                   2         2     1     2       2\n",
-       " &#20013;&#22269;        1         1     1     1       1\n",
-       " &#32654;&#22269;        1         1     1     1       1\n",
-       " *                       1         1     0     1       1\n",
-       " -                       1         1     0     1       1\n",
-       " -------                 1         1     0     1       1\n",
-       " .                       1         1     0     1       1\n",
-       " 01776                   1         1     0     1       1\n",
-       " 02458                   1         1     0     1       1"
+       "                   Count\n",
+       "Country                 \n",
+       "                    4588\n",
+       " \"n/a\"                 2\n",
+       " &#20013;&#22269;      1\n",
+       " &#32654;&#22269;      1\n",
+       " *                     1\n",
+       "...                  ...\n",
+       " zambia                5\n",
+       " zhengjiang            1\n",
+       " zimbabwe             24\n",
+       " Ã¤Â¸Â­Ã¥?Â½           2\n",
+       " Ã¶Ã°Â¹Ãº              8\n",
+       "\n",
+       "[628 rows x 1 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "users.groupby('Country').count().head(10)"
+    "users.groupby('Country').agg(Count = ('User-ID', 'count'))"
    ]
   },
   {
@@ -2065,7 +2025,7 @@
     "goodbooks['shared_number_of_reviews_with_a_text'] = round(goodbooks['work_text_reviews_count'] / goodbooks['authors_splitted'].apply(len), 2)\n",
     "\n",
     "goodbooks_exploded = goodbooks.explode('authors_splitted')\n",
-    "goodbooks_exploded['authors_splitted'] = goodbooks_exploded['authors_splitted'].str.strip() #rimozione spazi negli autori\n",
+    "goodbooks_exploded['authors_splitted'] = goodbooks_exploded['authors_splitted'].str.strip()\n",
     "goodbooks_exploded.groupby(['authors_splitted'], as_index=False)['shared_number_of_reviews_with_a_text'].sum().head(10)"
    ]
   },
@@ -2702,7 +2662,7 @@
     "for bin_eta in eta.groups.keys():\n",
     "    users_dict[bin_eta] = eta.get_group(bin_eta)\n",
     "\n",
-    "users_dict['(14, 24]'].set_index('User-ID')"
+    "users_dict['(14, 24]'].set_index('User-ID')  #esempio invocazione dataset dell'intervallo (14-24]"
    ]
   },
   {
